# ydb-orm

./: README.md  pyproject.toml
src/ydb_orm/: __init__.py  exceptions.py  query.py  registry.py  relationships.py  session.py
src/ydb_orm/utils/: cache.py  lazy.py  sql_builder.py
