[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ydb-orm"
version = "0.1.0"
description = "ORM-слой для YDB на основе ydb-dataclass с явными типами"
readme = "README.md"
authors = [{ name = "Korean-DOG" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "ydb>=4.0.0",
    "ydb-dataclass @ git+https://github.com/Korean-DOG/ydb-dataclass.git"
]

[project.urls]
Homepage = "https://github.com/Korean-DOG/ydb-orm"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]